# antistasis

./: .gitignore  LICENSE  README.md  graphics.py  main.py  pyproject.toml  simulation.py  water.pdn
antistasis/: __init__.py  __version__.py  graphics.py  main.py  simulation.py  ui.py
