[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Antistasis"
version = "0.0.1"
description = "A brief description of your project"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Nic Mower", email = "nicmower@gmail.com"}]
dependencies = [
    "numpy>=2.1.1",
    "pandas>=2.2.2",
	"pygame>=2.6.1",
	"pyglet>=2.0.20",
]
requires-python = ">=3.12.5"

[project.scripts]
antistasis = "antistasis.main:run"